# PLANN

./: .gitignore  CMakeLists.txt  README.md
inc/: ThreadPool.h  activation.h  layer.h  layersBuffer.h  library.h  loss.h  matrix.h  matrixTasks.h  matrix_tasks.h  model.h  parallelMatrix.h  parallel_matrix.h  plann.h  plannMath.h  plann_math.h  time_measure.hpp  trainCache.h
src/: Model.cpp  activation.cpp  layer.cpp  layersBuffer.cpp  library.cpp  loss.cpp  main.cpp  matrix.cpp  matrixTasks.cpp  matrix_tasks.cpp  model.cpp  parallelMatrix.cpp  parallel_matrix.cpp  plann.cpp  plannMath.cpp  plann_math.cpp  test_matrix.cpp  test_matrix_parallel.cpp  trainCache.cpp
